clusters/talos-cluster/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-staging-gateway
  namespace: gateway
  annotations:
    cert-manager.io/issuer: cloudflare-staging-issuer
spec:
  gatewayClassName: envoy
  listeners:
    - protocol: HTTPS
      port: 443
      name: https-gateway
      hostname: "*.staging.ossai.dev"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: cloudflare-staging-certificate
      allowedRoutes:
        namespaces:
          from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-gateway
  namespace: gateway
  annotations:
    cert-manager.io/issuer: cloudflare-issuer
spec:
  gatewayClassName: envoy
  listeners:
    - protocol: HTTPS
      port: 443
      name: https-gateway
      hostname: "*.horus.maix.ovh"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: cloudflare-certificate
      allowedRoutes:
        namespaces:
          from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-http-gateway
  namespace: gateway
spec:
  gatewayClassName: envoy
  listeners:
    - protocol: HTTP
      port: 80
      name: http-gateway
      hostname: "*.staging.ossai.dev"
      allowedRoutes:
        namespaces:
          from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-tcp-gateway
  namespace: gateway
spec:
  gatewayClassName: envoy
  listeners:
    - protocol: TCP
      port: 6379
      name: redis-listener
      allowedRoutes:
        namespaces:
          from: All
    - protocol: TCP
      port: 3306
      name: mysql-listener
      allowedRoutes:
        namespaces:
          from: All
    - protocol: TCP
      port: 5432
      name: postgres-listener
      allowedRoutes:
        namespaces:
          from: All
